<resources>
    <string name="app_name">Estructuras Discretas</string>
    <string name="pref_tema_app">Tema</string>
    <string name="pref_cargar_datos">Actualizar índice</string>
    <string name="pref_cat_gen">General</string>
    <string name="busqueda">Buscar</string>
    <string name="acerca">Acerca de…</string>
    <string name="preferencias">Preferencias</string>
    <string name="mostrar_todos_l">Mostrar todos los libros</string>
    <string name="mostrar_todos_t">Mostrar todos los temas</string>
    <string name="acerca_explicacion">App para el primer proyecto de la asignatura de Estructuras Discretas de la carrera de Ingeniería en Computación, impartida por la profesora Margarita Carrera Fournier</string>
    <string name="version">versión %s (%d)</string>
    <string name="acercade_equipo">Equipo 8</string>
    <string name="logo_alt">Logo</string>
    <string name="logo_equipo_alt">Logo del equipo</string>
    <string name="int_1_n">Acevedo Serrano Graciela Ximena</string>
    <string name="int_2_n">Álvarez Saldaña Ariana Lizeth</string>
    <string name="int_3_n">Cruz Vargas Emilio</string>
    <string name="int_4_n">Garciliano Díaz Giovanni Alfredo</string>
    <string name="int_1_id">Foto de Xime</string>
    <string name="int_2_id">Foto de Ariana</string>
    <string name="int_3_id">Foto de Emilio</string>
    <string name="int_4_id">Foto de Giovanni</string>
    <string name="img_unam">Logo de la UNAM</string>
    <string name="img_fi">Logo de la Facultad de Ingeniería</string>
    <string name="img_github">Ir al código fuente</string>
    <string name="buscaren">Buscar en</string>
    <string name="buscaren_ti">Título</string>
    <string name="buscaren_c_autor">Autor</string>
    <string name="buscaren_c_editor">Editor</string>
    <string name="buscaren_c_traductor">Traductor</string>
    <string name="buscaren_c_colab">Colaborador</string>
    <string name="buscaren_tema">Tema</string>
    <string name="buscaren_editorial">Editorial</string>
    <string name="buscaren_codigo">Código</string>
    <string name="buscaren_filtro_titulo">Temas a filtrar</string>
    <string name="acc_temas">Filtrar temas</string>
    <string name="pref_ubicacion_indice">Ubicación del índice</string>
    <string name="error_descarga">No se pudo descargar el índice de recursos. Compruebe su conexión a Internet.</string>
    <string name="error_descarga_t">Error</string>
    <string name="error_descarga_s">No se pudo descargar el índice de recursos</string>
    <string name="error_descarga_i_s">No se pudo descargar la imagen de portada</string>
    <string name="exito_descarga_s">Se actualizó el índice de recursos</string>
    <string name="error_descarga_ex">No se pudo actualizar las existencias</string>
    <string name="exito_act_s">Existencias actualizadas</string>
    <string name="lista_temas">Lista de temas</string>
    <string name="lista_recursos">Lista de recursos</string>
    <string name="favoritos">Favoritos</string>
    <string name="favoritos_a">Añadir a favoritos</string>
    <string name="favoritos_q">Quitar de favoritos</string>
    <string name="cargando">Cargando…</string>
    <string name="existencias">Actualizar existencias</string>
    <string name="compartir_qr">Compartir por QR</string>
    <string name="compartir_qr_explicacion">Comparte este código QR para acceder al recurso</string>
    <string name="compartir_qr_alt">Código QR del recurso</string>
    <string name="compartir_qr_trad">Compartir URL</string>
    <string name="error_vista_uri">La URL especificada no tiene el formato correcto</string>
    <string name="error_vista_app">La URL especificada no aplica para esta aplicación</string>
    <string name="error_vista_encontrado">No se encontró el recurso especificado</string>
    <string name="error_vista_tipo">No se reconoce el tipo de identificador</string>
    <string name="error_vista_indice">El índice de recurso especificado es inválido</string>
    <string name="error_vista_accion">No se especificó un recurso válido</string>
    <string name="error_generico">Algo ha fallado</string>
    <string name="recurso_tema">Temas</string>
    <string name="recurso_temaasig">Temas de la asignatura</string>
    <string name="recurso_exist">Existencias</string>
    <string name="recurso_si">✓ Si</string>
    <string name="recurso_fab">Leer documento</string>
    <string name="portada_alt">Portada</string>
    <string name="busqueda_pista">Escriba algo…</string>
    <string name="recurso_libro">Libro</string>
    <string name="recurso_libroe">Libro electrónico</string>
    <string name="patron_tema1">%d. </string>
    <string name="patron_tema2">%d.%d. </string>
    <string name="patron_votos">"%.1f de 5 (%d votos)</string>
    <string name="patron_id">(ID %s)</string>
    <string name="patron_clas">Clasificación %s</string>
    <string name="patron_ex">%d existencias, %d disponibles para préstamo</string>
    <string name="patron_disp">Próximo ejemplar disponible el %s</string>
    <string name="patron_act">Actualizado el %s</string>
    <string name="ayuda">Ayuda</string>
    <string name="ayuda_msg"><![CDATA[¿Hay algún problema o falla en la aplicación, o un error en algún dato? ¿O simplemente quieres hacer un comentario o sugerencia?<br />
        Tienes varias vías a tu disposición:<br><br>
        &#160;&#160;1. Comenta en <a href="https://play.google.com/store/apps/details?id=xyz.campanita.estructurasdiscretasp1">Google Play</a><br>
        &#160;&#160;2. Crea una incidencia en <a href="https://github.com/twilight1794/estructuras-discretas-p1/issues">GitHub</a><br>
        &#160;&#160;3. Envía un correo electrónico a <a href="mailto:campanita@disroot.org">campanita@disroot.org</a><br>
        &#160;&#160;4. Si conoces a los creadores (ver sección «Acerca de»), puedes informarles en persona]]></string>
    <string name="recurso_ver">Ver en línea</string>
    <string name="x_elementos">%d elementos</string>
    <string name="x_resultados">%d resultados</string>
    <string name="desconocido">Desconocido</string>
    <string name="tema_1">Lógica proposicional y cálculo de predicados</string>
    <string name="tema_2">Conjuntos, relaciones y pruebas matemáticas</string>
    <string name="tema_3">Sistemas algebraicos</string>
    <string name="tema_4">Teoría de gráficas</string>
    <string name="tema_5">Teoría de la computabilidad</string>
    <string name="tema_1_1">Fórmulas proposicionales y tablas de verdad</string>
    <string name="tema_1_2">Formas normales y dispositivos de dos estados</string>
    <string name="tema_1_3">Notación polaca y parentizada</string>
    <string name="tema_1_4">Elementos de inferencia para el cálculo proposicional</string>
    <string name="tema_1_5">Prueba automática de teoremas</string>
    <string name="tema_1_6">Cálculo de predicado</string>
    <string name="tema_1_1_1">Conceptos</string>
    <string name="tema_1_1_2">Tablas de verdad</string>
    <string name="tema_1_2_1">Forma normal disyuntiva principal</string>
    <string name="tema_1_2_2">Forma normal conjuntiva principal</string>
    <string name="tema_1_3_1">Notación</string>
    <string name="tema_1_3_2">Transformación de notaciones</string>
    <string name="tema_1_4_1">Método basado en tablas de verdad</string>
    <string name="tema_1_4_2">Método de derivación paso a paso</string>
    <string name="tema_1_5_1">Razonamiento automático</string>
    <string name="tema_1_5_2">Prueba automática de teoremas</string>
    <string name="tema_1_6_1">Predicados</string>
    <string name="tema_1_6_2">Fórmulas de predicados</string>
    <string name="tema_2_1">Conjuntos</string>
    <string name="tema_2_2">Relaciones y funciones</string>
    <string name="tema_2_3">Funciones de dispersión</string>
    <string name="tema_2_4">Prueba por inducción matemática</string>
    <string name="tema_2_5">Técnica del casillero vacío y diagonalización</string>
    <string name="tema_2_6">Análisis combinatorio</string>
    <string name="tema_2_1_1">Elementos de conjuntos</string>
    <string name="tema_2_1_2">Operaciones</string>
    <string name="tema_2_2_1">Notaciones</string>
    <string name="tema_2_2_2">Características y aplicaciones</string>
    <string name="tema_2_3_1">Notación y operaciones</string>
    <string name="tema_2_3_2">Aplicaciones</string>
    <string name="tema_2_4_1">Notaciones</string>
    <string name="tema_2_4_2">Características y aplicaciones</string>
    <string name="tema_2_5_1">Características de la técnica</string>
    <string name="tema_2_5_2">Aplicaciones</string>
    <string name="tema_2_6_1">Notaciones</string>
    <string name="tema_2_6_2">Inducción y recursión</string>
    <string name="tema_2_6_3">Permutaciones, ordenaciones, combinaciones y sus propiedades</string>
    <string name="tema_2_6_4">Características y aplicaciones</string>
    <string name="tema_2_6_5">Teoría de conteo</string>
    <string name="tema_2_6_6">Principio de Pigeonhole</string>
    <string name="tema_2_6_7">Funciones generadoras y relaciones de recurrencia</string>
    <string name="tema_3_1">Definiciones y conceptos de sistemas algebraicos</string>
    <string name="tema_3_2">Semigrupos, monoides y grupos</string>
    <string name="tema_3_3">La aritmética de residuos en las computadoras</string>
    <string name="tema_3_4">Los códigos de grupo en las comunicaciones</string>
    <string name="tema_3_5">Álgebra booleana</string>
    <string name="tema_3_6">Representación y minimización de funciones booleanas</string>
    <string name="tema_3_7">Introducción a los circuitos de dos estados</string>
    <string name="tema_3_1_1">Definiciones y conceptos</string>
    <string name="tema_3_1_2">Tipos y características</string>
    <string name="tema_3_2_1">Características y aplicaciones de los semigrupos</string>
    <string name="tema_3_2_2">Características y aplicaciones de los monoides</string>
    <string name="tema_3_2_3">Características y aplicaciones de los grupos</string>
    <string name="tema_3_3_1">Aritmética de residuos</string>
    <string name="tema_3_3_2">Aplicaciones en las computadoras</string>
    <string name="tema_3_4_1">Elementos de un sistema de comunicaciones</string>
    <string name="tema_3_4_2">Códigos de grupo</string>
    <string name="tema_3_4_3">Aplicaciones de los códigos de grupo</string>
    <string name="tema_3_5_1">Características del álgebra booleana</string>
    <string name="tema_3_5_2">Álgebra booleana en las computadoras</string>
    <string name="tema_3_6_1">Métodos de representación</string>
    <string name="tema_3_6_2">Métodos de minimización</string>
    <string name="tema_3_6_3">Aplicaciones en el diseño</string>
    <string name="tema_3_7_1">Circuitos de dos estados</string>
    <string name="tema_3_7_2">Diseño de circuitos de dos estados</string>
    <string name="tema_4_1">Conceptos básicos y definiciones</string>
    <string name="tema_4_2">Representación matricial</string>
    <string name="tema_4_3">Manipulación de gráficas</string>
    <string name="tema_4_4">Árboles</string>
    <string name="tema_4_5">Detección de puntos muertos</string>
    <string name="tema_4_6">Detección de fallas en circuitos combinacionales</string>
    <string name="tema_4_7">Temas avanzados de teoría de gráficas</string>
    <string name="tema_4_1_1">Definiciones y conceptos</string>
    <string name="tema_4_1_2">Representaciones</string>
    <string name="tema_4_2_1">Conceptos básicos</string>
    <string name="tema_4_2_2">Características y representaciones matriciales</string>
    <string name="tema_4_3_1">Propiedades de las gráficas</string>
    <string name="tema_4_3_2">Operaciones con gráficas</string>
    <string name="tema_4_4_1">Definiciones y conceptos de árboles</string>
    <string name="tema_4_4_2">Recorrido de árboles</string>
    <string name="tema_4_4_3">Operaciones con árboles</string>
    <string name="tema_4_5_1">Conceptos y definiciones</string>
</resources>