<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_gen">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/pref_entradas_values_tema_app"
            android:entryValues="@array/pref_valores_tema_app"
            android:key="tema_app"
            android:title="@string/pref_tema_app"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="https://raw.githubusercontent.com/twilight1794/estructuras-discretas-p1/main/indices/datos.json"
            android:key="ubicacion_indice"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_ubicacion_indice"
            app:enableCopying="true"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="cargar_datos"
            app:title="@string/pref_cargar_datos">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>