<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_cat_gen">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_entradas_values_tema_app"
            android:entryValues="@array/pref_valores_tema_app"
            android:key="tema_app_x"
            android:title="@string/pref_tema_app"
            app:summary="%s" />
        <Preference
            app:key="cargar_datos"
            app:title="@string/pref_cargar_datos">
        </Preference>
    </PreferenceCategory>
    <!--<ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_entradas_values_tema_app"
        android:entryValues="@array/pref_entradas_values_tema_app"
        android:key="list_preference_1"
        android:title="List preference" />-->

</PreferenceScreen>