<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="casual"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mostrar_todos_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_todos_l"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="256dp"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="270dp" />

            <Button
                android:id="@+id/mostrar_todos_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_todos_t"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="245dp"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="318dp" />

            <Button
                android:id="@+id/mostrar_favoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favoritos"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="256dp"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="270dp" />

            <Button
                android:id="@+id/preferencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferencias"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="157dp"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="366dp" />

            <Button
                android:id="@+id/acercade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acerca"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="133dp"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="414dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@android:string/search_go"
        app:srcCompat="@drawable/ic_baseline_search_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>